--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,52 +1,65 @@
 <div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
-      <c-col lg="10" xl="8">
+      <c-col lg="10" xl="8" class="d-flex flex-column align-items-center">
+        <!-- Logo centrado arriba del formulario -->
+        <img src="assets/images/ash1.png" alt="Ash Grove Logo" style="height: 180px;" class="mb-4" />
+
         <c-card-group>
+          <!-- Login Card -->
           <c-card class="p-4">
             <c-card-body>
-              <form cForm>
+              <form cForm (ngSubmit)="login()">
                 <h1>Login</h1>
                 <p class="text-body-secondary">Sign In to your account</p>
+              
+                <div *ngIf="error" class="text-danger mb-2">{{ error }}</div>
+              
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
                   </span>
-                  <input autoComplete="username" cFormControl placeholder="Username" />
+                  <input
+                    type="email"
+                    cFormControl
+                    placeholder="Email"
+                    [(ngModel)]="email"
+                    name="email"
+                    required
+                  />
                 </c-input-group>
+              
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
                     <svg cIcon name="cilLockLocked"></svg>
                   </span>
                   <input
-                    autoComplete="current-password"
+                    type="password"
                     cFormControl
                     placeholder="Password"
-                    type="password"
+                    [(ngModel)]="password"
+                    name="password"
+                    required
                   />
                 </c-input-group>
+              
                 <c-row>
                   <c-col xs="6">
-                    <button cButton class="px-4" color="primary">
-                      Login
-                    </button>
-                  </c-col>
-                  <c-col class="text-end" xs="6">
-                    <button cButton class="px-0" color="link">
-                      Forgot password?
-                    </button>
+                    <button cButton type="submit" class="px-4" color="primary">Login</button>
                   </c-col>
                 </c-row>
               </form>
             </c-card-body>
           </c-card>
+
+          <!-- Register Card -->
           <c-card [ngStyle]="{'minWidth.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
                 <h2>Sign up</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
+                  Contact with your administrator to sing up.
+                  Thank you for visiting Ash Groove.
                 </p>
                 <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
                   Register Now!
