--- a/src/app/components/procedure-detail/procedure-detail.component.html
+++ b/src/app/components/procedure-detail/procedure-detail.component.html
@@ -4,12 +4,21 @@
   <ul class="list-group mb-4">
     <li class="list-group-item"><strong>ID:</strong> {{ procedimiento.id }}</li>
     <li class="list-group-item"><strong>Name:</strong> {{ procedimiento.name }}</li>
-    <li class="list-group-item"><strong>Category:</strong> {{ procedimiento.category }}</li>
+    <li class="list-group-item"><strong>Plant Area:</strong> {{ procedimiento.plantArea }}</li>
+    <li class="list-group-item"><strong>Department:</strong> {{ procedimiento.department }}</li>
+    <li class="list-group-item"><strong>Status:</strong> {{ procedimiento.status }}</li>
     <li class="list-group-item"><strong>Created By:</strong> {{ procedimiento.user }}</li>
-    <li class="list-group-item"><strong>Modification date:</strong> {{ procedimiento.modificationDate }}</li>
+    <li class="list-group-item"><strong>Modification Date:</strong> {{ procedimiento.modificationDate }}</li>
+
+    <li class="list-group-item">
+      <strong>Job Positions:</strong>
+      <ul class="mt-2 ms-3">
+        <li *ngFor="let job of procedimiento.jobPosition">{{ job }}</li>
+      </ul>
+    </li>
   </ul>
 
-  <h5 class="mb-2">Content</h5>
+  <h5 class="mb-2">PDF Content</h5>
   <pdf-viewer
     [src]="procedimiento.content"
     [render-text]="true"
